# modern-software-dev-assignments

./: pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
week2/: README.md
week2/app/: db.py
week2/app/routers/: action_items.py  notes.py
week2/app/services/: extract.py
week2/frontend/: index.html
week2/tests/: test_extract.py
week4/: CLAUDE.md
week4/.claude/: settings.local.json
week4/.claude/commands/: implement-feature.md
week4/.playwright-mcp/: page-snapshot.md
week4/backend/app/: dependencies.py  main.py  models.py  schemas.py
week4/backend/app/routers/: action_items.py  auth.py  notes.py
week4/backend/app/services/: auth.py
week4/backend/tests/: conftest.py  test_action_items.py  test_auth.py  test_notes.py  test_root.py  test_utils.py
week4/data/: seed.sql
week4/frontend/: app.js  index.html  styles.css
